01.Practice/mongo-pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: mongodb
  name: mongodb
spec:
  volumes:
  - name: mongodb-data
    persistentVolumeClaim:
      claimName: mongodb-pvc
  containers:
  - image: mongo
    name: mongodb
    ports:
    - containerPort: 27017
      protocol: TCP
    volumeMounts:
    - name: mongodb-data
      mountPath: /data/db
