01.Practice/nodejs-deploy-rollout.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
      - image: gasbugs/nodejs:v1
        name: nodejs
        ports:
        - containerPort: 8080
          protocol: TCP
