01.Practice/nodejs-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nodejs-deploy
  name: nodejs-deploy
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
      - image: gasbugs/nodejs
        name: nodejs
