01.Practice/pod-busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: busybox
  name: pod-busybox
spec:
  containers:
  - image: busybox
    name: pod-busybox
    command: ["sleep"]
    args: ["$(SLEEP_TIME)"]
