01.Practice/pod-command-args.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    purpose: demonstrate-command
  name: command-demo
spec:
  containers:
  - image: debian
    name: command-demo
    command: ["echo"]
    args: ["$(HOSTNAME)", "$(KUBERNETES_PORT)", "$(MESSAGE)"]
  restartPolicy: OnFailure
