01.Practice/nodejs-lb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodejs-lb
  name: nodejs-lb
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
    nodePort: 30002
  selector:
    app: nodejs
  type: LoadBalancer
