01.Practice/nodejs-nodeport-rollout-check.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodejs-svc
  name: nodejs-svc
spec:
  type: NodePort
  selector:
    app: nodejs
  ports:
  - name: http
    nodePort: 30001
    port: 80
    protocol: TCP
    targetPort: 8080
