01.Practice/php-apache-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: php-apache
  name: php-apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-apache
  strategy: {}
  template:
    metadata:
      labels:
        app: php-apache
    spec:
      containers:
      - image: k8s.gcr.io/hpa-example
        name: php-apache
        resources:
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: php-apache
  name: php-apache-svc
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: php-apache
  type: ClusterIP
