01.Practice/pod-init-container.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: myapp
  name: myapp-pod
spec:
  containers:
  - image: busybox:1.28
    name: myapp-pod
    command: 
    - "sh"
    args: 
    - "-c"
    - "echo The app is running! && sleep 3600"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp
  name: myservice
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9376 
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp
  name: mydb
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9377
